--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <title>Quelobizer - Success</title>
 </head>
 <body>
-<form>
-    You may use following url in OBS:
-    <h1><a th:href="${defaultUrl}" th:text="${defaultUrl}"></a></h1>
-</form>
+You may use following url in OBS:
+<h1><a th:href="${defaultUrl}" th:text="${defaultUrl}"></a></h1>
+
+<!--<ul>-->
+<!--    <li><a href="">Settings</a></li>-->
+<!--    <li><a href="">Test screen</a></li>-->
+<!--</ul>-->
 </body>
 </html>
