--- a/src/main/resources/templates/config.html
+++ b/src/main/resources/templates/config.html
@@ -2,33 +2,34 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <title>Quelobizer - Configuration</title>
-    <link rel="stylesheet" th:href="@{/css/style.css}"/>
+    <div th:replace="fragment/head"></div>
 </head>
 <body>
-<div th:if="${error}" class="error" th:text="${error}"></div>
-<form action="#" th:action="@{/config}" th:object="${queleaProperties}" method="post">
-    <h1>Quelea server properties:</h1>
-    <table>
-        <tr>
-            <td>
+<div th:replace="fragment/navbar"></div>
+<div class="container p-5">
+    <div class="container-fluid">
+        <h1>Quelea server configuration:</h1>
+        <div th:if="${error}" class="alert alert-danger alert-primary alert-dismissible fade show" role="alert">
+            <div th:text="${error}"/>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <form action="#" th:action="@{/config}" th:object="${queleaProperties}" method="post">
+            <div class="form-group">
                 <label for="queleaUrl">URL</label>
-            </td>
-            <td>
-                <input id="queleaUrl" name="url" th:field="*{url}" type="text"/>(eg. http://192.168.100.15:1112)
-            </td>
-        </tr>
-        <tr>
-            <td>
+                <input class="form-control" id="queleaUrl" name="url" th:field="*{url}" type="text"/>
+                <small class="form-text text-muted">(eg. http://192.168.100.15:1112)</small>
+            </div>
+            <div class="form-group">
                 <label for="queleaPassword">Password</label>
-            </td>
-            <td>
-                <input id="queleaPassword" name="password" type="password" th:field="*{password}"/>
-            </td>
-        </tr>
-    </table>
-    <input type="submit" value="Go"/><br/><br/>
-    You can find the url in quelea settings:<br/>
-    <img th:src="@{/images/settings.png}" width="800" alt="quelea settings screen"/>
-</form>
+                <input class="form-control" id="queleaPassword" name="password" type="password" th:field="*{password}"/>
+            </div>
+            <input type="submit" class="btn btn-primary" value="Go"/><br/><br/>
+        </form>
+        You can find the url in quelea settings:<br/>
+        <img th:src="@{/images/settings.png}" width="800" alt="quelea settings screen"/>
+    </div>
+</div>
 </body>
 </html>
